# soui4

./: CMakeLists.txt
.github/workflows/: build.yml
SOUI/include/interface/capi/: CMakeLists.txt  README.md  STATUS.md  example.c  generate_basic_capi.bat  generate_capi.py  generate_remaining_capi.py  soui-capi.h
SOUI/src/control/: SRichEdit.cpp
